Fixed a spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
   margin-top: 0.8em;
 }
 
+#main {
+margin-bottom: 10em;
+}
 .App {
   text-align: center;
 }
